force-app/main/default/objects/Opportunity/fields/Recurring_Donation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Frequency__c</fullName>
    <description>Frequency of the recurring donation</description>
    <inlineHelpText>Frequency of the recurring donation</inlineHelpText>
    <label>Recurring Donation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>