force-app/main/default/objects/Opportunity/fields/Recurring_Initial_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Initial_Order_Date__c</fullName>
    <description>The initial recurring order date</description>
    <inlineHelpText>The initial recurring order date</inlineHelpText>
    <label>Initial Recurring Donation Date</label>
    <type>Date</type>
</CustomField>