force-app/main/default/objects/Opportunity/fields/Recurring_Number__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Number__c</fullName>
    <description>Denotes the number of payments</description>
    <inlineHelpText>Denotes the number of payments</inlineHelpText>
    <label>Recurring Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>