force-app/main/default/objects/Opportunity/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>IF(CONTAINS( External_System_Link__c ,&quot;sweetheartday&quot;), &quot;sweetheartday.org.au&quot;,
IF(CONTAINS( External_System_Link__c ,&quot;hero4heartkids&quot;), &quot;hero4heartkids.org.au&quot;,
IF(CONTAINS( External_System_Link__c ,&quot;twofeetheartbeat&quot;), &quot;twofeetheartbeat.org.au&quot;,
&quot;heartkids.org.au&quot;)))</formula>
    <inlineHelpText>Website this Opportunity was generated from - if blank then Opportunity has been manually created</inlineHelpText>
    <label>Site</label>
    <type>Text</type>
</CustomField>