force-app/main/default/objects/Opportunity/fields/Sponsor_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Donation_Amount__c</fullName>
    <description>Amount donated to the fundraising page</description>
    <inlineHelpText>Amount donated to the fundraising page</inlineHelpText>
    <label>Sponsor Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>