force-app/main/default/objects/Opportunity/fields/Strategic__Application_Process__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Application_Process__c</fullName>
    <label>Application Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>