force-app/main/default/objects/Opportunity/fields/Strategic__Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Closing_Date__c</fullName>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>