force-app/main/default/objects/Opportunity/fields/Strategic__Closing_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Closing_Date_Status__c</fullName>
    <label>Closing Date Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>