force-app/main/default/objects/Opportunity/fields/Strategic__Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Eligibility__c</fullName>
    <label>Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>