force-app/main/default/objects/Opportunity/fields/Strategic__Estimated_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Estimated_Distribution_Date__c</fullName>
    <label>Estimated Distribution Date</label>
    <type>Date</type>
</CustomField>