force-app/main/default/objects/Opportunity/fields/Strategic__Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Exclusions__c</fullName>
    <label>Exclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>