force-app/main/default/objects/Opportunity/fields/Strategic__Funding_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Funding_Criteria__c</fullName>
    <label>Funding Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>