force-app/main/default/objects/Opportunity/fields/Strategic__Grant_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Contact_Notes__c</fullName>
    <label>Grant Contact Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>