force-app/main/default/objects/Opportunity/fields/Strategic__Grant_Period__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Period__c</fullName>
    <label>Grant Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>