force-app/main/default/objects/Opportunity/fields/Strategic__Grant_Range__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Range__c</fullName>
    <label>Grant Range</label>
    <type>TextArea</type>
</CustomField>