force-app/main/default/objects/Opportunity/fields/Strategic__Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Opening_Date__c</fullName>
    <label>Opening Date</label>
    <type>Date</type>
</CustomField>