force-app/main/default/objects/Opportunity/fields/Strategic__Past_Funding__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Past_Funding__c</fullName>
    <label>Past Funding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>