force-app/main/default/objects/Opportunity/fields/Strategic__Total_Grants_Pool__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Total_Grants_Pool__c</fullName>
    <label>Total Grants Pool</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>