force-app/main/default/objects/Opportunity/fields/Strategic__Trustees__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Trustees__c</fullName>
    <label>Trustees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>