force-app/main/default/objects/Opportunity/fields/webkul_wws__woo_coupon_Value__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_coupon_Value__c</fullName>
    <label>woo coupon Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>