force-app/main/default/objects/Opportunity/fields/webkul_wws__woo_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>woo Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>