force-app/main/default/objects/Opportunity/fields/webkul_wws__Woo_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Woo_Order_Status__c</fullName>
    <label>Woo Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>