force-app/main/default/objects/Opportunity/fields/webkul_wws__woo_Order_Tax__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Order_Tax__c</fullName>
    <label>woo Order Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>