force-app/main/default/objects/Opportunity/fields/webkul_wws__Woo_Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Woo_Shipment_Method__c</fullName>
    <label>Woo Shipment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>