force-app/main/default/objects/Opportunity/fields/webkul_wws__woo_Total_order__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Total_order__c</fullName>
    <label>woo Total order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>