force-app/main/default/objects/Opportunity/fields/WooCommerce_Subscription__c.field-meta.xml
<CustomField>
    <fullName>WooCommerce_Subscription__c</fullName>
    <description>Variable donation product from WooCommerce</description>
    <label>WooCommerce Subscription</label>
    <type>TextArea</type>
</CustomField>