force-app/main/default/objects/Opportunity/recordTypes/Bequest.recordType-meta.xml
<RecordType>
    <fullName>Bequest</fullName>
    <active>true</active>
    <businessProcess>Bequest</businessProcess>
    <description>Bequest opportunity record</description>
    <label>Bequest</label>
</RecordType>