force-app/main/default/objects/Opportunity/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <businessProcess>Corporate</businessProcess>
    <description>this is the income related to Corporate</description>
    <label>Corporate</label>
</RecordType>