force-app/main/default/objects/Opportunity/recordTypes/MajorGift.recordType-meta.xml
<RecordType>
    <fullName>MajorGift</fullName>
    <active>true</active>
    <businessProcess>Major Gift</businessProcess>
    <description>Large Donation from a Major Donor</description>
    <label>Major Gift</label>
</RecordType>