force-app/main/default/objects/Opportunity/listViews/Admin_Orders_Offline.listView-meta.xml
<ListView>
    <fullName>Admin_Orders_Offline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Campaign_Name__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Site__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Admin_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Admin Orders (Offline)</label>
</ListView>