force-app/main/default/objects/Opportunity/listViews/Event_Regos_Ticket_Number.listView-meta.xml
<ListView>
    <fullName>Event_Regos_Ticket_Number</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Number_of_Tickets__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Event Registration</value>
    </filters>
    <label>Event Regos_Ticket Number</label>
</ListView>