force-app/main/default/objects/Opportunity/listViews/Oppty_where_PCS_is_Blank.listView-meta.xml
<ListView>
    <fullName>Oppty_where_PCS_is_Blank</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>Oppty where PCS is Blank</label>
</ListView>