force-app/main/default/objects/Opportunity/listViews/Organisation_Opportunities.listView-meta.xml
<ListView>
    <fullName>Organisation_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>npsp__Primary_Contact__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npe01__Is_Opp_From_Individual__c</field>
        <operation>equals</operation>
        <value>false</value>
    </filters>
    <label>Organisation Opportunities</label>
</ListView>