force-app/main/default/objects/Opportunity/listViews/Recurring_Donations.listView-meta.xml
<ListView>
    <fullName>Recurring_Donations</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>npsp__Primary_Contact__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Recurring_Donation_Frequency__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Recurring Donation</value>
    </filters>
    <label>Recurring Donations</label>
</ListView>