force-app/main/default/objects/Opportunity/listViews/Sponsor_Donations.listView-meta.xml
<ListView>
    <fullName>Sponsor_Donations</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Campaign_Name__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Sponsor Donation</value>
    </filters>
    <label>Sponsor Donations</label>
</ListView>